--- a/test_configs/valid/6.large_psbt.yaml
+++ b/test_configs/valid/6.large_psbt.yaml
@@ -5,24 +5,28 @@ test_cases:
     validation_result: "valid"
     inputs:
       - type: "p2wpkh"
-        count: 20
+        count: 5
+        amount: 100000
+        key_derivation_suffix: "large_batch"
+      - type: "p2tr"
+        count: 2
         amount: 100000
         key_derivation_suffix: "large_batch"
     outputs:
       - type: "silent_payment"
         count: 3
-        amount: 300000
+        amount: 30000
         scan_key_id: "recipient_a"
       - type: "silent_payment"
         count: 2
-        amount: 200000
+        amount: 20000
         scan_key_id: "recipient_b"
       - type: "silent_payment"
         count: 1
-        amount: 100000
+        amount: 10000
         scan_key_id: "recipient_c"
       - type: "regular_p2tr"
-        amount: 500000  # Change output
+        amount: 50000  # Change output
     scan_keys:
       - key_id: "recipient_a"
         derivation_suffix: "recipient_a"
