add p2pkh and p2sh_p2wpkh input support

--- a/test_configs/valid/1.single_signer.yaml
+++ b/test_configs/valid/1.single_signer.yaml
@@ -1,7 +1,7 @@
 description: "Valid single-signer ECDH share scenarios"
 
 test_cases:
-  - description: "one P2WPKH input using per-input ECDH shares"
+  - description: "one P2WPKH input single-signer"
     validation_result: "valid"
     inputs:
       - type: "p2wpkh"
