--- a/test_configs/valid/5.wip_psbt.yaml
+++ b/test_configs/valid/5.wip_psbt.yaml
@@ -49,3 +49,24 @@ test_cases:
       - key_id: "default"
     control_override:
       missing_ecdh_for_input: 1  # Input 1 will not have ECDH share
+
+  - description: "WIP: one input/two sp outputs (different scan keys) - Output 0 missing ECDH share for scan key"
+    validation_result: "invalid"
+    inputs:
+      - type: "p2wpkh"
+        amount: 200000
+        key_derivation_suffix: "multi_scan_missing_ecdh"
+    outputs:
+      - type: "silent_payment"
+        amount: 90000
+        scan_key_id: "scan_key_a"
+      - type: "silent_payment"
+        amount: 90000
+        scan_key_id: "scan_key_b"
+    scan_keys:
+      - key_id: "scan_key_a"
+        derivation_suffix: "recipient_a"
+      - key_id: "scan_key_b"
+        derivation_suffix: "recipient_b"
+    control_override:
+      missing_ecdh_for_scan_key: "scan_key_a"
