--- a/test_configs/invalid/5.address_mismatch.yaml
+++ b/test_configs/invalid/5.address_mismatch.yaml
@@ -35,7 +35,7 @@ test_cases:
     scan_keys:
       - key_id: "default"
 
-  - description: "output scripts: two sp outputs (same scan/spend keys) - output scripts are computed with swapped k values"
+  - description: "output scripts: three sp outputs (same scan/spend keys) - output scripts are computed with swapped k values"
     validation_result: "invalid"
     inputs:
       - type: "p2wpkh"
@@ -45,10 +45,14 @@ test_cases:
       - type: "silent_payment"
         amount: 90000
         scan_key_id: "default"
-        force_k_index: 1
+        force_k_index: 0
       - type: "silent_payment"
         amount: 10000
         scan_key_id: "default"
-        force_k_index: 0
+        force_k_index: 2
+      - type: "silent_payment"
+        amount: 10000
+        scan_key_id: "default"
+        force_k_index: 1
     scan_keys:
       - key_id: "default"
