--- a/test_configs/valid/1.single_signer.yaml
+++ b/test_configs/valid/1.single_signer.yaml
@@ -1,7 +1,7 @@
 description: "Valid single-signer ECDH share scenarios"
 
 test_cases:
-  - description: "one P2WPKH input single-signer"
+  - description: "can finalize: one P2WPKH input single-signer"
     validation_result: "valid"
     inputs:
       - type: "p2wpkh"
@@ -14,7 +14,7 @@ test_cases:
     scan_keys:
       - key_id: "default"
 
-  - description: "two inputs single-signer - using global ECDH share"
+  - description: "can finalize: two inputs single-signer - using global ECDH share"
     validation_result: "valid"
     inputs:
       - type: "p2wpkh"
@@ -29,8 +29,9 @@ test_cases:
       - key_id: "default"
     control_override:
       use_global_ecdh: true
+      no_sighash_for_input: 0
 
-  - description: "two inputs single-signer - using per-input ECDH shares"
+  - description: "can finalize: two inputs single-signer - using per-input ECDH shares"
     validation_result: "valid"
     inputs:
       - type: "p2wpkh"
@@ -43,8 +44,10 @@ test_cases:
         scan_key_id: "default"
     scan_keys:
       - key_id: "default"
+    control_override:
+      no_sighash_for_input: 0
 
-  - description: "two inputs/two sp outputs - mixed global and per-input ECDH shares"
+  - description: "can finalize: two inputs/two sp outputs - mixed global and per-input ECDH shares"
     validation_result: "valid"
     inputs:
       - type: "p2wpkh"
@@ -65,3 +68,32 @@ test_cases:
         derivation_suffix: "recipient_b"
     control_override:
       use_global_ecdh: ["recipient_a"]
+
+  - description: "can finalize: three sp outputs (different scan keys) - multiple global ECDH shares"
+    validation_result: "valid"
+    inputs:
+      - type: "p2wpkh"
+        amount: 500000
+        key_derivation_suffix: "different_key"
+      - type: "p2wpkh"
+        amount: 100000
+        key_derivation_suffix: "different_key"
+    outputs:
+      - type: "silent_payment"
+        amount: 90000
+        scan_key_id: "recipient_a"
+      - type: "silent_payment"
+        amount: 90000
+        scan_key_id: "recipient_b"
+      - type: "silent_payment"
+        amount: 90000
+        scan_key_id: "recipient_c"
+    scan_keys:
+      - key_id: "recipient_a"
+        derivation_suffix: "recipient_a"
+      - key_id: "recipient_b"
+        derivation_suffix: "recipient_b"
+      - key_id: "recipient_c"
+        derivation_suffix: "recipient_c"
+    control_override:
+      use_global_ecdh: ["recipient_a", "recipient_b", "recipient_c"]
