--- a/test_configs/valid/4.same_scan_key.yaml
+++ b/test_configs/valid/4.same_scan_key.yaml
@@ -1,7 +1,7 @@
 description: "Valid PSBT with multiple outputs to same scan key"
 
 test_cases:
-  - description: "three sp outputs (same scan key) - each output has distinct k value"
+  - description: "can finalize: three sp outputs (same scan key) - each output has distinct k value"
     validation_result: "valid"
     inputs:
       - type: "p2wpkh"
@@ -25,7 +25,7 @@ test_cases:
     scan_keys:
       - key_id: "default"
 
-  - description: "three sp outputs (same scan key) / two regular outputs - k value must not follow output index"
+  - description: "can finalize: three sp outputs (same scan key) / two regular outputs - k value must not follow output index"
     validation_result: "valid"
     # SP outputs are at output indices 0, 2, 4; regular outputs at 1, 3.
     # With correct per-scan-key k counter: k=0, k=1, k=2.
